cmake_minimum_required(VERSION 3.29)
project(ObjectOriented)

set(CMAKE_CXX_STANDARD 17)

add_executable(Main main.cpp)
add_executable(InclassWeek4 "Lab Inclass/Week4.cpp")
add_executable(InclassWeek3 "Lab Inclass/Week3.cpp")
add_executable(HomeworkWeek3 "Homework/Week3.cpp")
add_executable(HomeworkWeek4 "Homework/Week4.cpp")
