cmake_minimum_required(VERSION 3.29)
project(ObjectOriented)

set(CMAKE_CXX_STANDARD 17)

add_executable(Main main.cpp)
add_executable(InclassWeek3 "Lab Inclass/Week3.cpp")
add_executable(InclassWeek4 "Lab Inclass/Week4.cpp")
add_executable(InclassWeek6 "Lab Inclass/Week6.cpp")
add_executable(InclassWeek9 "Lab Inclass/Week9.cpp")
add_executable(Homework1 "Homework/Homework.cpp")
add_executable(Homework2 "Homework/Homework2.cpp")
add_executable(Homework3 "Homework/Homework3.cpp")

